# musical-octo-lamp

./: .gitignore  .gitmodules  Dockerfile  README.md  build-windows-mingw.sh  build-windows.ps1  build.sh  dsrt.md  pyproject.toml  requirements.txt  run-windows.bat  run.sh
.github/workflows/: build-windows.yml  build.yml
lumina-player/: PROJECT_SUMMARY.md  pom.xml
lumina-player/scripts/: download-vlc-libs.ps1  download-whisper-model.ps1  package-windows.ps1  requirements.txt  whisper_server.py
lumina-player/src/main/java/com/luminaplayer/ai/: AudioExtractor.java  ChunkProgressEvent.java  ChunkedSubtitleGenerator.java  ChunkedTranscriptionTask.java  ModelDownloadTask.java  ModelRouter.java  SimpleVAD.java  SubtitleGenerator.java  TranscriptionResult.java  TranscriptionTask.java  WhisperEngine.java  WhisperLanguage.java  WhisperModel.java  WhisperQuality.java
lumina-player/src/main/java/com/luminaplayer/app/: AppConfig.java  LuminaPlayerApp.java  NativeLibrarySetup.java
lumina-player/src/main/java/com/luminaplayer/engine/: AudioManager.java  SubtitleManager.java  VideoManager.java  VlcEngine.java
lumina-player/src/main/resources/: logback.xml
lumina-player/src/test/resources/test-subtitles/: sample.srt
vlc_ai_subtitles/: __init__.py  __main__.py
vlc_ai_subtitles/core/: audio_capture.py  pipeline.py  subtitle_formatter.py  transcription.py
vlc_ai_subtitles/tests/: test_audio_capture.py  test_pipeline.py  test_subtitle_formatter.py  test_transcription.py
vlc_ai_subtitles/vlc_ext/: __init__.py  vlc_ai_subtitles.lua
(+57 files in other folders)
